tests/ui/cast/ptr-to-trait-obj-wrap-add-auto.stderr
error[E0277]: the trait bound `W<(dyn A + 'static)>: A` is not satisfied
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:14:5
   |
LL |     a as _
   |     ^ the trait `A` is not implemented for `W<(dyn A + 'static)>`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:8:1
   |
LL | trait A {}
   | ^^^^^^^
   = note: required for the cast from `*const W<(dyn A + 'static)>` to `*const dyn A + Send`

error[E0277]: `(dyn A + 'static)` cannot be sent between threads safely
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:14:5
   |
LL |     a as _
   |     ^ `(dyn A + 'static)` cannot be sent between threads safely
   |
   = help: within `W<(dyn A + 'static)>`, the trait `Send` is not implemented for `(dyn A + 'static)`
note: required because it appears within the type `W<(dyn A + 'static)>`
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:10:8
   |
LL | struct W<T: ?Sized>(T);
   |        ^
   = note: required for the cast from `*const W<(dyn A + 'static)>` to `*const dyn A + Send`

error[E0277]: the size for values of type `(dyn A + 'static)` cannot be known at compilation time
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:14:5
   |
LL |     a as _
   |     ^ doesn't have a size known at compile-time
   |
   = help: within `W<(dyn A + 'static)>`, the trait `Sized` is not implemented for `(dyn A + 'static)`
note: required because it appears within the type `W<(dyn A + 'static)>`
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:10:8
   |
LL | struct W<T: ?Sized>(T);
   |        ^
   = note: required for the cast from `*const W<(dyn A + 'static)>` to `*const dyn A + Send`

error[E0277]: the trait bound `W<(dyn A + 'static)>: A` is not satisfied
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:21:5
   |
LL |     a as _
   |     ^ the trait `A` is not implemented for `W<(dyn A + 'static)>`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:8:1
   |
LL | trait A {}
   | ^^^^^^^
   = note: required for the cast from `*const W<W<(dyn A + 'static)>>` to `*const W<dyn A + Send>`

error[E0277]: `(dyn A + 'static)` cannot be sent between threads safely
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:21:5
   |
LL |     a as _
   |     ^ `(dyn A + 'static)` cannot be sent between threads safely
   |
   = help: within `W<(dyn A + 'static)>`, the trait `Send` is not implemented for `(dyn A + 'static)`
note: required because it appears within the type `W<(dyn A + 'static)>`
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:10:8
   |
LL | struct W<T: ?Sized>(T);
   |        ^
   = note: required for the cast from `*const W<W<(dyn A + 'static)>>` to `*const W<dyn A + Send>`

error[E0277]: the size for values of type `(dyn A + 'static)` cannot be known at compilation time
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:21:5
   |
LL |     a as _
   |     ^ doesn't have a size known at compile-time
   |
   = help: within `W<(dyn A + 'static)>`, the trait `Sized` is not implemented for `(dyn A + 'static)`
note: required because it appears within the type `W<(dyn A + 'static)>`
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:10:8
   |
LL | struct W<T: ?Sized>(T);
   |        ^
   = note: required for the cast from `*const W<W<(dyn A + 'static)>>` to `*const W<dyn A + Send>`

error: adding an auto trait `Send` to a trait object in a pointer cast may cause UB later on
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:28:5
   |
LL |     a as _
   |     ^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #127323 <https://github.com/rust-lang/rust/issues/127323>
note: the lint level is defined here
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:6:9
   |
LL | #![deny(ptr_cast_add_auto_to_object)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: adding an auto trait `Send` to a trait object in a pointer cast may cause UB later on
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:34:5
   |
LL |     a as _
   |     ^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #127323 <https://github.com/rust-lang/rust/issues/127323>

error: adding an auto trait `Send` to a trait object in a pointer cast may cause UB later on
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:40:5
   |
LL |     a as _
   |     ^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #127323 <https://github.com/rust-lang/rust/issues/127323>

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0277`.
Future incompatibility report: Future breakage diagnostic:
error: adding an auto trait `Send` to a trait object in a pointer cast may cause UB later on
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:28:5
   |
LL |     a as _
   |     ^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #127323 <https://github.com/rust-lang/rust/issues/127323>
note: the lint level is defined here
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:6:9
   |
LL | #![deny(ptr_cast_add_auto_to_object)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^

Future breakage diagnostic:
error: adding an auto trait `Send` to a trait object in a pointer cast may cause UB later on
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:34:5
   |
LL |     a as _
   |     ^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #127323 <https://github.com/rust-lang/rust/issues/127323>
note: the lint level is defined here
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:6:9
   |
LL | #![deny(ptr_cast_add_auto_to_object)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^

Future breakage diagnostic:
error: adding an auto trait `Send` to a trait object in a pointer cast may cause UB later on
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:40:5
   |
LL |     a as _
   |     ^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #127323 <https://github.com/rust-lang/rust/issues/127323>
note: the lint level is defined here
  --> $DIR/ptr-to-trait-obj-wrap-add-auto.rs:6:9
   |
LL | #![deny(ptr_cast_add_auto_to_object)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^

